--- a/public/services/src/app/views/detail/detailRecommend/recommend.less
+++ b/public/services/src/app/views/detail/detailRecommend/recommend.less
@@ -24,6 +24,51 @@
                     display: block;
                     width: 100%;
                 }
+                .origin{
+                    position: absolute;
+                    bottom: 0;
+                    right: 0;
+                    width: 4rem;
+                    height: 4rem;
+                    /*border: 0.21rem solid rgba(0,0,0,0.05);*/
+                    border-bottom: 0;
+                    border-radius: 0.21rem 0 0 0;
+                    background-color: rgba(0,0,0,0.4);
+                    .tag{
+                        position: absolute;
+                        display: block;
+                        top: 0;
+                        left: 0;
+                        padding: 0.2rem;
+                        /*width: 1.57rem;*/
+                        height: 0.71rem;
+                        line-height: 0.71rem;
+                        font-size: 0.5rem;
+                        text-align: center;
+                        border-radius: 0.21rem 0 0 0;
+                        background-color: #f9d161;
+                        z-index: 1;
+                        border-radius: 0.2rem;
+                    }
+                    .pic{
+                        width: 100%;
+                        height: 4rem;
+                        overflow: hidden;
+                        img{
+                            display: block;
+                            width: 100%;
+                        }
+                    }
+                    .div-line{
+                        position: absolute;
+                        left: -0.21rem;
+                        bottom: -0.18rem;
+                        width: 4.42rem;
+                        height: 0.18rem;
+                        background-color: #fded5e;
+                        z-index: 1;
+                    }
+                }
             }
             .workDesc{
                 display: block;
