--- a/public/services/src/app/views/detail/detailWorks/ask-detail.less
+++ b/public/services/src/app/views/detail/detailWorks/ask-detail.less
@@ -87,49 +87,101 @@
 .detail-padding {
 	/*padding-bottom: 3rem;*/
 }
-.post-workCount{
-	width: 100%;
-	position: relative;
-	padding: 1.07rem 0 1.25rem 0;
-	text-align: center;
-	.workCount-bg{
-		position: absolute; 
-		width: 100%;
-		height: 100%;
-		top: 0;
-		left: 0;
-		z-index: -2;
-		background-color: #F7F7F7;
-	}
-	.text-workCount{
-		color: #000;
-		font-size: 0.86rem;
-		opacity: 0.8;
-		line-height: 1rem;
-		height: 1rem;
-		em{
-			display: inline-block;
-			line-height: 1rem;
-			height: 1rem;	
-			font-size: 1.07rem;
-			margin: 0 .3rem;
+.works-num {
+	background-color: #F7F7F7;
+	padding: 1.18rem 0;
+	.post-workCount{
+		/*width: 100%;*/
+		display: inline-block;
+		position: relative;
+		padding: 0.71rem 2.14rem 0.71rem 1.14rem;
+		text-align: center;
+		border-radius: 0 2rem 2rem 0;
+		background-color: #F9D161;
+		.workCount-icon {
+			float: left;
+			width: 1.54rem;
+			height: 1.46rem;
+			margin-right: 0.79rem;
+			background: url(/images/zuopin.png) 0 0 no-repeat;
+			background-size: contain;
+		}
+		.text-workCount{
+			float: left;
+			font-size: 1rem;
+			color: #fff;
+			line-height: 1.46rem;
 		}
 	}
 }
 .artWorkShow{
+	/*padding-bottom: 0.5rem;*/
 	/*border-bottom: 1.43rem solid #F7F7F7;*/
 }
-.commentDetail{
+.comment-num {
 	width: 94%;
-	margin: 0 3%;
+	margin: 0 auto 1rem;
 	border-bottom: 1px solid #eaeaea;
+	color: #313040;
+	font-size: 1rem;
+	line-height: 3.75rem;
+	em {
+		color: #83838C;
+	}
+}
+.comment-list {
+	.comment-avatar {
+		float: left;
+		width: 9%;
+		height: 2.29rem;
+		overflow: hidden;
+		border-radius: 50%;
+		margin-right: 2%;
+		img {
+			display: block;
+			width: 100%;
+		}
+	}
+	.commentHead {
+		float: left;
+		width: 89%;
+		color: #84848E;
+		line-height: 1rem;
+		.userName {
+			display: block;
+			margin-bottom: 0.3rem;
+			font-size: 0.93rem;
+		}		
+		.userNameGroup {
+			display: block;
+			margin-bottom: 0.5rem;
+			font-size: 0.93rem;
+			em {
+				color: #D6D6D9;
+				margin: 0 0.5rem;
+			}
+		}
+		.commentText {
+			display: block;
+			font-size: 0.93rem;
+			line-height: 1.43rem;
+			color: #313040;
+		}
+	}
+}
+.commentDetail {
+	width: 94%;
+	padding: 0 3%;
+	padding-bottom: 0.5rem;
+	/*border-bottom: 1px solid #eaeaea;*/
 	.commentLine{
-		padding: 0.86rem 0 0.86rem 0;
+		/*padding: 0.86rem 0 0.86rem 0;*/
 		/*border-bottom: 1px solid #eaeaea;*/
 		.commentHead{
+			line-height: 1.5rem;
 			.userName{
 				float: left;
-				color: #000;
+				color: #8B8B93;
 				font-size: 0.93rem;
 				font-family: "PingFangSC-Regular","sans-serif";
 			}
@@ -153,20 +205,22 @@
 			}
 		}
 		.commentText{
-			margin-top: 0.46rem;
-			display: block;
-			width:100%;
+			/*display: block;*/
+			/*float: left;*/
+			/*margin-top: 0.46rem;*/
+			/*width:100%;*/
 			font-size: 0.93rem;
 			font-family: "PingFangSC-Regular","sans-serif";
-			opacity: 0.6;
+			color: #474655;
 		}
 	}
 	.commentReply{
-		padding-top: 1.14rem;
+		/*padding-top: 1.14rem;*/
 		.userNameGroup{
 			float: left;
 			line-height: 1.43rem;
 			font-size: 0.93rem;
+			color: #8B8B93;
 			.userName-reply{
 				float: left;
 				/*width: 1.86rem;*/
@@ -175,8 +229,9 @@
 			em{
 				float: left;
 				margin: 0 .25rem;
+				color: #D6D6D9;
 				font-family: "PingFangSC-Regular","sans-serif";
-				opacity: 0.6;
+				/*opacity: 0.6;*/
 			}
 			.userName-beReplied{
 				float: left;
@@ -185,26 +240,44 @@
 		}
 	}
 }
+.commentDetail:nth-child(1) {
+	padding-top: 0.71rem;
+}
 .viewMore{
 	display: block;
-	width: 100%;
+	width: 94%;
+	margin: 0 auto 0;
 	font-size: 0.86rem;
-	opacity: 0.4;
+	/*opacity: 0.4;*/
 	font-family: "PingFangSC-Light","sans-serif";
-	color: #000;
-	text-align: center;
-	height: 2.6rem;
-	line-height: 2.6rem;
+	color: #FAD877;
+	/*text-align: center;*/
+	height: 1.6rem;
+	line-height: 1.6rem;
 }
 .rob-sofa {
 	display: block;
 	width: 100%;
-	font-size: 1rem;
+	padding: 1rem 0 1.56rem;
+	font-size: 0.93rem;
 	font-family: "PingFangSC-Light","sans-serif";
-	color: #000;
+	color: #B9B8BD;
 	text-align: center;
-	height: 2.6rem;
-	line-height: 2.6rem;
+	line-height: 1rem;
+	.rob-sofa-icon {
+		display: block;
+		width: 15%;
+		height: 3.93rem;
+		margin: 0 auto 0.5rem;
+		background: url(/images/comment-detail.png) 0 0 no-repeat;
+		background-size: contain;
+	}
+	span {
+		display: block;
+		width: 100%;
+		text-align: center;
+
+	}
 }
 .post-footer{
 	position: fixed;
