--- a/public/services/src/app/views/channel/channelDetail/channel-detail.less
+++ b/public/services/src/app/views/channel/channelDetail/channel-detail.less
@@ -1,30 +1,32 @@
-.channel-header {
-	.channel {
-		padding: 0.43rem 1.07rem;
-		.vertical {
-			float: left;
-			width: 0.29rem;
-			height: 1.29rem;
-			margin-right: 0.43rem;
-			background-color: #f9d161;
-			border-radius: 3.57rem;
-		}
-		h2 {
-			float: left;
-			font-size: 1rem;
-			line-height: 1.29rem;
-			color: #313040;
-		}
-		.channel-more {
-			float: right;
-			padding: 0 0.75rem;
-			line-height: 1.29rem;
-			font-size: 0.79rem;
-			color: #313040;	
-			border: 1px solid #B9B8BD;
-			border-radius: 3.57rem;
-		}
+.channel-go {
+	display: block;
+	padding: 0.43rem 1.07rem;
+	border-bottom: 1px solid #eaeaea;
+	.vertical {
+		float: left;
+		width: 0.29rem;
+		height: 1.29rem;
+		margin-right: 0.43rem;
+		background-color: #f9d161;
+		border-radius: 3.57rem;
 	}
+	h2 {
+		float: left;
+		font-size: 1rem;
+		line-height: 1.29rem;
+		color: #313040;
+	}
+	.channel-more {
+		float: right;
+		padding: 0 0.75rem;
+		line-height: 1.29rem;
+		font-size: 0.79rem;
+		color: #313040;	
+		border: 1px solid #B9B8BD;
+		border-radius: 3.57rem;
+	}
+}
+.channel-header {
 	.channel-banner {
 		position: relative;
 		overflow: hidden;
