--- a/public/services/src/app/views/detail/detailContent/detail-content.less
+++ b/public/services/src/app/views/detail/detailContent/detail-content.less
@@ -19,11 +19,102 @@
 		vertical-align: top;
 	}
 }
-.recommend-detail {
+/*.recommend-detail {
+    padding: 0 0 1.25rem;
 	background-color: #f7f7f7;
+}*/
+.detail-section {
+	border-bottom: 1px solid #eaeaea;
+}
+.original-detail {
+	margin-top: -0.85rem;
+	margin-bottom: 0.71rem;
+	border: 1.07rem solid #f7f7f7;
+	/*background-color: #f7f7f7;*/
+	.original-box {
+		border-radius: 1rem;
+		.original-pic {
+			overflow: hidden;
+			position: relative;
+			float: left;
+			width: 29%;
+			height: 7.24rem;	
+			margin-right: 3%;
+			img {
+				position: absolute;
+				display: block;
+				width: 100%;
+			}
+			span {
+				position: absolute;
+				top: 0.61rem;
+				left: -0.1rem;
+				padding: 0.18rem 0.5rem;
+				color: #313040;
+				font-size: 0.8rem;
+				line-height: 1rem;
+				background-color: #F9D161;
+				border-radius: 0 0.5rem 0.5rem 0;
+			}
+		}
+		.original-author {
+			float: left;
+			box-sizing: border-box;
+			width: 68%;
+			padding: 0.39rem 0.39rem 0 0;
+			background-color: #fff;
+			.author {
+				float: right;
+				width: 1.43rem;
+				height: 1.43rem;
+				padding-left: 3rem;
+				overflow: hidden;
+				img {
+					display: block;
+					width: 100%;
+					border-radius: 50%;
+				}
+			}
+			.original-desc {
+				clear: both;
+				display: block;
+				position: relative;
+				height: 2.6rem;
+				width: 86%;
+				padding: 0.36rem;
+				background-color: #F2F2F2;
+				line-height: 1.32rem;
+				border-radius: 0.3rem 0 0.3rem 0.3rem;
+				span {
+					display: block;
+					overflow: hidden;
+					height: 2.6rem;
+				}
+				.desc-icon {
+					position: absolute;
+					right: -0.5rem;
+					top: 0;
+					width: 0.5rem;
+					height: 0.5rem;
+					background: url(/images/angle.png) 0 0 no-repeat;
+					background-size: contain;
+				}
+			}
+			.see-original {
+				display: block;
+				float: right;
+				color: #313040;
+				font-size: 0.8rem;
+				line-height: 1rem;
+				padding-left: 3rem;
+				padding-top: 0.61rem;
+			}
+		}
+	}
 }
 .post-workShow{
 	width: 100%;
+	/*padding-bottom: 0.5rem;*/
 	border-bottom: 0.36rem solid #F7F7F7;
 	.sectionHeader{
 		display: block;
@@ -77,7 +168,8 @@
 	.sectionFooter{
 		width: 94%;
 		padding:0 0 1.25rem;
-		margin: 0 auto;
+		margin: 0 auto 0.79rem;
+		/*margin: 0 auto;*/
 		color: #000;
 		box-sizing: border-box;
 		border-bottom: 1px solid #eaeaea;
@@ -98,7 +190,7 @@
 			    width: 2rem;
 			    height: 1.51rem;
 			    background: url(/images/ic_share.png) no-repeat 0 center;
-			    background-size: 58%;
+			    background-size: 56%;
 			}
 			.ask-detail {
 				float: right;
