--- a/public/services/src/app/views/detail/detailRecommend/detailRecommend.html
+++ b/public/services/src/app/views/detail/detailRecommend/detailRecommend.html
@@ -7,6 +7,16 @@
 <a href="#detail/detail/<%= type %>/<%= reply_id %>" class="workSection">
 	<div class="pic-box center-loading-container">
 		<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160524-1452195743fa23db730.jpeg?imageView2/2/w/720"  data-original="<%= image_url %>" alt="作品" class="workPic center-loading">
+		<div class="origin">
+			<span class="tag">原图</span>
+			<div class="pic">
+				<% var i =0; _.each(ask_uploads, function(ask, i) { i++ %>
+					<% if(i==1) { %>
+				<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160524-1452195743fa23db730.jpeg?imageView2/2/w/720"  data-original="<%= ask.image_url %>" alt="原图" class="imageLoad2">
+				<% }}) %>
+			</div>
+			<div class="div-line"></div>
+		</div>
 	</div>
 	<!-- <div class="workDesc"><%= desc %></div> -->
 	<div class="workSectionFooter clearfix">
