--- a/public/services/src/app/views/detail/detailContent/detailContent.html
+++ b/public/services/src/app/views/detail/detailContent/detailContent.html
@@ -1,7 +1,9 @@
+<% if(ask_id != 0) { %>
 <a href="#channel/detail/<%= ask.category_id %>" class="channel-go clearfix">
 	<div class="vertical"></div>
 	<h2><%= ask.category_name %></h2>
 </a>
+<% } %>
 <div class="post-workShow artWorkShow">
 	<div class="sectionHeader clearfix">
 		<a href="#personal/index/<%= uid %>" class="avatar">
