--- a/public/services/src/app/views/activity/activityHeader/activityHeader.html
+++ b/public/services/src/app/views/activity/activityHeader/activityHeader.html
@@ -22,7 +22,7 @@
 	</div>
 	<ul class="tap clearfix">
 		<li class="new works-tap activity"  data-type="new">
-			<div class="new-tap clearfix">
+			<div class="hot-tap clearfix">
 				<i class="new-icon"></i>
 				<span>最新</span>
 			</div>
