--- a/public/services/src/app/views/channel/channelContent/channelContent.html
+++ b/public/services/src/app/views/channel/channelContent/channelContent.html
@@ -10,7 +10,7 @@
 					<img src="<%= icon %>" alt="">
 				</dt>
 				<dd>
-					<h2><%= display_name %></h2>
+					<!-- <h2><%= display_name %></h2> -->
 					<p><%= description %></p>
 				</dd>
 			</dl>
