--- a/public/services/src/app/views/channel/channelDetail/channelDetail.html
+++ b/public/services/src/app/views/channel/channelDetail/channelDetail.html
@@ -19,7 +19,7 @@
 	</div>
 	<ul class="tap clearfix">
 		<li class="new works-tap activity"  data-type="works">
-			<div class="new-tap clearfix">
+			<div class="hot-tap clearfix">
 				<span>作品区</span>
 			</div>
 		</li>
