--- a/public/services/src/app/views/detail/detailContent/detailContent.html
+++ b/public/services/src/app/views/detail/detailContent/detailContent.html
@@ -63,7 +63,9 @@
 			<% }) %>	
 			<div class="original-author">
 				<a href="#personal/index/<%= ask.author.uid %>" class="author">
-					<img src="<%= ask.author.avatar %>" alt="">
+					<span class="original-pic">
+						<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160524-1452195743fa23db730.jpeg?imageView2/2/w/720"  data-original="<%= ask.author.avatar %>" alt="" class="original-img">
+					</span>
 				</a>
 				<a href="#detail/works/<%= ask_id %>" class="original-desc">
 					<span><%= ask.desc %></span>
