--- a/public/services/src/app/views/hot/hotChannel/hotChannel.html
+++ b/public/services/src/app/views/hot/hotChannel/hotChannel.html
@@ -6,7 +6,7 @@
 				<dt>
 					<img src="<%= items.icon %>" alt="">
 				</dt>
-				<dd><%= items.display_name %></dd>
+				<!-- <dd><%= items.display_name %></dd> -->
 			</dl>
 		</a>
 		<% }) %>		
