--- a/public/services/src/app/views/detail/detailRecommend/recommend.less
+++ b/public/services/src/app/views/detail/detailRecommend/recommend.less
@@ -51,10 +51,12 @@
                         border-radius: 0.2rem;
                     }
                     .pic{
+                        position:relative;
+                        overflow: hidden;
                         width: 100%;
                         height: 4rem;
-                        overflow: hidden;
                         img{
+                            position: absolute;
                             display: block;
                             width: 100%;
                         }
