--- a/public/services/src/app/views/detail/detailContent/detail-content.less
+++ b/public/services/src/app/views/detail/detailContent/detail-content.less
@@ -116,15 +116,14 @@
 	border-bottom: 0.36rem solid #F7F7F7;
 	.sectionHeader{
 		display: block;
-		width: 100%;
-		padding: 1rem 0;
+		width: 94%;
+		padding: 1rem 3%;
 		border-bottom: 1px solid #DDDDDD;
 		background-color: #fff;
 		.avatar {
 			float: left;
 			height: 1.79rem;
 			width: 1.79rem;
-			margin-left: 3%;
 			border-radius: 50%;
 			overflow: hidden;
 		}
