--- a/public/services/src/app/views/channel/otherChannel/otherChannel.html
+++ b/public/services/src/app/views/channel/otherChannel/otherChannel.html
@@ -7,7 +7,7 @@
 		<span>
 			<dl class="channel-detail">
 				<dt>
-					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160524-19440457443e84daf3d.jpg" alt="">
+					<img src="http://7u2spr.com1.z0.glb.clouddn.com/20160530-155554574bf20a66afe.jpeg?imageView2/2/w/720" alt="">
 				</dt>
 				<dd>
 					<!-- <h2>其他</h2> -->
