--- a/public/services/src/app/views/channel/otherChannel/otherChannel.html
+++ b/public/services/src/app/views/channel/otherChannel/otherChannel.html
@@ -14,7 +14,7 @@
 					<p>它们好像都不在一个频道上</p>
 				</dd>
 			</dl>
-		</span>
+		</span>`
 		<div class="works-pic">
 		<% _.each(items, function(items) {   %>
 			<span class="center-loading-container"><img class="center-loading" src="http://7u2spr.com1.z0.glb.clouddn.com/20160524-1452195743fa23db730.jpeg?imageView2/2/w/720"  data-original="<%= items.image_url %>" alt=""></span>
