--- a/public/services/css/main.css
+++ b/public/services/css/main.css
@@ -853,7 +853,6 @@ input::-webkit-input-placeholder {
 }
 .menu .menuTop {
   position: relative;
-  /*display: block;*/
   width: 3.29rem;
   height: 3.29rem;
   margin-top: 0.93rem;
@@ -1629,7 +1628,7 @@ input::-webkit-input-placeholder {
   90% {
     opacity: 0.7;
     -webkit-transform: translate3d(0, -3%, 0);
-    transform: translate3d(0, -5%, 0);
+    transform: translate3d(0, -3%, 0);
   }
   100% {
     opacity: 1;
@@ -2301,6 +2300,77 @@ input::-webkit-input-placeholder {
   border-radius: 3.57rem;
 }
 
+.honor-fans {
+  position: relative;
+  width: 92%;
+  margin: 0 auto;
+  padding: 1.07rem 0;
+  border-bottom: 1px solid #eaeaea;
+}
+.honor-fans .fans-avatar {
+  overflow: hidden;
+  float: left;
+  width: 13%;
+  height: 13%;
+  margin-right: 3%;
+  border-radius: 50%;
+}
+.honor-fans .fans-avatar img {
+  display: block;
+  width: 100%;
+}
+.honor-fans .honor-ifo {
+  float: left;
+  width: 84%;
+}
+.honor-fans .honor-ifo .user-name {
+  display: block;
+  margin-bottom: 0.71rem;
+  color: #313040;
+  font-size: 1.07rem;
+  line-height: 1.5rem;
+}
+.honor-fans .honor-ifo .honor-list .honor-data {
+  display: inline-block;
+  font-size: 0.86rem;
+  color: #B9B8BD;
+  line-height: 1.18rem;
+}
+.honor-fans .honor-ifo .honor-list .yuan {
+  display: inline-block;
+  width: 20%;
+  height: 1.18rem;
+  line-height: 1.18rem;
+  text-align: center;
+}
+.honor-fans .honor-ifo .honor-list .yuan span {
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  border-radius: 50%;
+  background-color: #B9B8BD;
+  vertical-align: middle;
+}
+.honor-fans .follow {
+  position: absolute;
+  top: 1.07rem;
+  right: 0.5rem;
+  width: 1.43rem;
+  height: 3rem;
+}
+.honor-fans .getfollow {
+  background: url(/images/follow.png) 0 0 no-repeat;
+  background-size: contain;
+}
+.honor-fans .following {
+  background: url(/images/following.png) 0 0 no-repeat;
+  background-size: contain;
+}
+.honor-fans .mutual {
+  background: url(/images/follow-mutual.png) 0 0 no-repeat;
+  background-size: contain;
+}
+
 .personal-grid {
   background-color: #f7f7f7;
 }
@@ -2393,48 +2463,75 @@ input::-webkit-input-placeholder {
   box-sizing: border-box;
 }
 .header-portrait {
+  position: relative;
   margin-top: -0.71rem;
   width: 100%;
-  height: 9.32rem;
-  padding-top: 1.93rem;
+  padding: 2rem 1.32rem 0;
   box-sizing: border-box;
-  background-color: #f9d161;
+  background-color: #fff;
+  border-top: 1px solid #eaeaea;
 }
-.header-portrait .user-info {
-  position: relative;
-}
-.header-portrait .user-info .portrait {
-  margin: 0 auto;
-  margin-bottom: 0.68rem;
-  width: 3.71rem;
-  height: 3.71rem;
+.header-portrait .portrait {
+  float: left;
+  width: 20%;
+  height: 20%;
   border-radius: 100%;
   overflow: hidden;
+  margin-right: 3%;
 }
-.header-portrait .user-info .portrait img {
+.header-portrait .portrait img {
   display: block;
   width: 100%;
   height: 100%;
 }
-.header-portrait .user-info .nickname {
+.header-portrait .user-ifo {
+  float: left;
+  width: 77%;
+  margin-bottom: 2.32rem;
+}
+.header-portrait .user-ifo .nickname {
   display: block;
   width: 100%;
-  text-align: center;
-  font-size: 1.07rem;
-  color: rgba(0, 0, 0, 0.8);
+  margin-bottom: 1rem;
+  line-height: 1.71rem;
+  font-size: 1.21rem;
+  color: #313040;
 }
-.header-portrait .user-info .follow {
+.header-portrait .user-ifo .honor .honor-num {
+  float: left;
+  width: 25%;
+}
+.header-portrait .user-ifo .honor .honor-num span {
+  display: block;
+  width: 100%;
+  font-size: 1rem;
+  color: #313040;
+  line-height: 1.18rem;
+}
+.header-portrait .user-ifo .honor .honor-num em {
+  display: block;
+  width: 100%;
+  font-size: 0.85rem;
+  color: #8E8E8E;
+  line-height: 1rem;
+}
+.header-portrait .get-follow {
   position: absolute;
-  top: 0rem;
-  left: 81%;
-  display: inline-block;
-  padding: 0.1rem 0.8rem;
-  border-radius: 1rem;
-  background-color: #FFFED7;
-  color: #666;
+  top: 1.8rem;
+  right: 1.32rem;
+  width: 4.14rem;
+  height: 1.93rem;
+  border-radius: 0.2rem;
+  background-color: #F9D161;
+  color: #fff;
+  text-align: center;
+  line-height: 1.93rem;
+  border: 1px solid #F9D161;
 }
-.header-portrait .user-info .following {
-  background-color: #E0DADA;
+.header-portrait .following {
+  background-color: #fff;
+  color: #B9B8BD;
+  border: 1px solid #B9B8BD;
 }
 .header-nav {
   display: block;
@@ -2457,6 +2554,7 @@ input::-webkit-input-placeholder {
   display: inline-block;
   width: 3.93rem;
   height: 2.5rem;
+  color: #A5A4AB;
 }
 .header-nav .active a {
   font-size: 0.86rem;
