--- a/public/services/src/app/views/personal/personalHeader/personalHeader.html
+++ b/public/services/src/app/views/personal/personalHeader/personalHeader.html
@@ -13,7 +13,7 @@
 				<span class="fans-num"><%= fellow_count %></span>
 				<em>关注</em>
 			</a>
-			<a href="" class="get-like honor-num">
+			<a class="get-like honor-num">
 				<span class="fans-num"><%= uped_c	ount %></span>
 				<em>获得喜欢</em>
 			</a>
