--- a/public/services/src/app/views/personal/honor/fans.html
+++ b/public/services/src/app/views/personal/honor/fans.html
@@ -18,6 +18,6 @@
     %>
 	<div class=" follow <%= is_follow?'mutual':'following' %>" id="followHe" isFollow="<%= is_follow %>" data-uid="<%= uid %>"></div>
 	<% } else { %>
-		<div class="follow <%= is_fan?'mutual':'getfollow' %>"></div>
+		<div class="follow <%= is_fan?'mutual':'getfollow' %>" id="cancelFollow" isFollow="<%= is_follow %>" data-uid="<%= uid %>"></div>
 	<% } %>
 </div>
