--- a/public/services/src/app/views/personal/honor/fans.less
+++ b/public/services/src/app/views/personal/honor/fans.less
@@ -54,19 +54,19 @@
 		position: absolute;
 		top: 1.07rem;
 		right: 0.5rem;
-		width: 1.43rem;
+		width: 2.86rem;
 		height: 3rem;
 	}	
 	.getfollow {
-		background: url(/images/follow.png) 0 0 no-repeat;
-		background-size: contain;
+		background: url(/images/follow.png) right 0 no-repeat;
+		background-size: 50%;
 	}
 	.following {
-		background: url(/images/following.png) 0 0 no-repeat;
-		background-size: contain;
+		background: url(/images/following.png) right 0 no-repeat;
+		background-size: 50%;
 	}
 	.mutual {
-		background: url(/images/follow-mutual.png) 0 0 no-repeat;
-		background-size: contain;
+		background: url(/images/follow-mutual.png) right 0 no-repeat;
+		background-size: 50%;
 	}
 }
