--- a/public/services/src/app/views/hot/hotWorks/works.less
+++ b/public/services/src/app/views/hot/hotWorks/works.less
@@ -38,7 +38,7 @@
                 position: relative;
                 display: block;
                 width: 100%;
-                margin-bottom: 0.54rem;
+                /*margin-bottom: 0.54rem;*/
                 max-height: 30rem;
                 font-size: 0;
                 img{
