--- a/public/services/src/app/views/personal/honor/fans.less
+++ b/public/services/src/app/views/personal/honor/fans.less
@@ -52,21 +52,21 @@
 	}
 	.follow {
 		position: absolute;
-		top: 1.07rem;
-		right: 0.5rem;
-		width: 2.86rem;
-		height: 3rem;
+		top: 0rem;
+		right: -1.5rem;
+		width: 5.72rem;
+		height: 5rem;
 	}	
 	.getfollow {
-		background: url(/images/follow.png) right 0 no-repeat;
-		background-size: 50%;
+		background: url(/images/follow.png) center 1rem no-repeat;
+		background-size: 25%;
 	}
 	.following {
-		background: url(/images/following.png) right 0 no-repeat;
-		background-size: 50%;
+		background: url(/images/following.png) center 1rem no-repeat;
+		background-size: 25%;
 	}
 	.mutual {
-		background: url(/images/follow-mutual.png) right 0 no-repeat;
-		background-size: 50%;
+		background: url(/images/follow-mutual.png) center 1rem no-repeat;
+		background-size: 25%;
 	}
 }
