--- a/public/services/src/less/swiper.less
+++ b/public/services/src/less/swiper.less
@@ -5,6 +5,9 @@
     -webkit-transform-style: preserve-3d;
 }
 .swiper-wrapper {
+    position: relative;
+    width: 100%;
+    height: 100%;
     z-index: 1;
     display: -webkit-box;
     display: -moz-box;
@@ -23,21 +26,23 @@
     -webkit-box-sizing: content-box;
     -moz-box-sizing: content-box;
     box-sizing: content-box;
+    transform-style: preserve-3d;
 }
 .swiper-pagination, .swiper-wrapper {
-    -webkit-transform: translate3d(0, 0, 0);
-}
-.swiper-slide, .swiper-wrapper {
-    height: 100%;
-    position: relative;
-    transform-style: preserve-3d;
-    width: 100%;
+    -webkit-transform: translate3d(0,0,0);
+    -moz-transform: translate3d(0,0,0);
+    -o-transform: translate(0,0);
+    -ms-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 
 .swiper-slide {
     -webkit-flex-shrink: 0;
     -ms-flex: 0 0 auto;
     flex-shrink: 0;
+    width: 100%;
+    height: 100%;
+    position: relative;
 }
 .swiper-slide, .swiper-wrapper {
     -ms-transform-style: preserve-3d;
