--- a/public/services/src/app/views/hot/hotChannel/hot-channel.less
+++ b/public/services/src/app/views/hot/hotChannel/hot-channel.less
@@ -1,6 +1,6 @@
 .hot-channel {
 	.channel {
-		overflow: hidden;
+		/*overflow: hidden;*/
 		height: 3.7rem;
 		background-color: #fff;
 		margin-bottom: 1rem;
