--- a/public/services/src/less/common.less
+++ b/public/services/src/less/common.less
@@ -1,6 +1,6 @@
 @charset 'utf-8';
 /* CSS reset */
-html{color:#000;font-family: "Helvetica neue",Helvetica,Tahoma,"PingFang SC","lantinghei sc","Microsoft Yahei", sans-serif;}
+html{min-width: 320px;min-height: 100%;color:#000;font-family: "Helvetica neue",Helvetica,Tahoma,"PingFang SC","lantinghei sc","Microsoft Yahei", sans-serif;}
 body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,button,textarea,p,blockquote,th,td,strong{padding:0;margin:0;font-family: "Helvetica neue",Helvetica,Tahoma,"PingFang SC","lantinghei sc","Microsoft Yahei", sans-serif;}
 table{border-collapse:collapse;border-spacing:0;}
 fieldset,img{border:0;}
@@ -18,6 +18,7 @@ sub{vertical-align:baseline;}
 legend{color:#000;}
 input,button,textarea,optgroup,option{border:none;outline: none;-webkit-appearance: none;font-family: "Helvetica neue",Helvetica,Tahoma,"PingFang SC","lantinghei sc","Microsoft Yahei", sans-serif; font-size:inherit;font-style:inherit;font-weight:inherit;}
 input,button,textarea,select{*font-size:100%; resize: none;}
+input:-moz-placeholder {color: #fff;}input:-ms-input-placeholder {color: #fff;}input::-webkit-input-placeholder {color: #fff;}
 .clearfix:after {content:"\200B"; display:block; height:0; clear:both; }
 *{-webkit-tap-highlight-color:rgba(0,0,0,0);}
 .hide {
@@ -25,26 +26,20 @@ input,button,textarea,select{*font-size:100%; resize: none;}
 }
 body, html {
     font-size: 1rem;
-    min-width: 320px;
-	min-height: 100%;
-	color: #000;
-	font-family: 'PingFangSC-Regular','sans-serif';
 }
 .none {
     display: none ;  
 }
-.block {
-    display: block ;  
+.brick {
+    display: inline-block;
+    vertical-align: top;
 }
-input:-moz-placeholder {
-	color: #fff;
+.ellipsis {
+	overflow: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
 }
-input:-ms-input-placeholder {
-	color: #fff;
-}
-input::-webkit-input-placeholder {
-	color: #fff;
-}
+
 .header {
     width: 100%;
     z-index: 90;
