--- a/public/services/src/app/views/detail/detailContent/detailContent.html
+++ b/public/services/src/app/views/detail/detailContent/detailContent.html
@@ -15,7 +15,8 @@
 				<%= time(created_at) %>
 			</span>
 		</a>
-		<%  if(!is_follow) {  %>
+    	
+		<% var dataUid = window.app.user.get('uid');  if(!is_follow || dataUid != <%= uid %>) {  %>
 			<div class="follow" remove="follow<%= uid %>" isFollow="<%= is_follow %>" data-uid="<%= uid %>">关注</div>
 		<% } %>
 	</div>
