--- a/public/services/src/app/views/personal/honor/fans.less
+++ b/public/services/src/app/views/personal/honor/fans.less
@@ -8,7 +8,7 @@
 		overflow: hidden;
 		float: left;
 		width: 13%;
-		height: 13%;
+		height: 3.2rem;
 		margin-right: 3%;
 		border-radius: 50%;
 		img {
