--- a/public/services/src/app/views/personal/honor/fans.html
+++ b/public/services/src/app/views/personal/honor/fans.html
@@ -15,7 +15,7 @@
     <% 
     	var dataUid = window.app.user.get('uid');
         var honorType = $('body').attr('honor-type');
-        if( honorType == 'fans' || dataUid!= uid) {
+        if( honorType == 'fans' && dataUid != uid) {
     %>
 	<div class="follow <% is_follow?'mutual':'following' %>" id="followHe" isFollow="<%= is_follow %>" data-uid="<%= uid %>"></div>
 	<% } %>
